check power and number  values